# Unified-KUMC-Anam-Front

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  routes.py  schemas.py  security.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: dashboard.html  index.html
